--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>FastAPI Web App</title>
-    <link rel='stylesheet' href='/static/css/style.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/app/static/css/index.css">
+    <script src="https://kit.fontawesome.com/606d99f9be.js" crossorigin="anonymous"></script>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to FastAPI Web App!</h1>
-    <script src='/static/js/app.js'></script>
+    <div class="container">
+        <div class="sidebar">
+            <div class="sidebar-main">
+                <div class="sidebar-header">
+                    <h1>Document</h1>
+                    <h1>Management System</h1>
+                </div>
+                <div class="sidebar-btn">
+                    <i class="fa-solid fa-caret-left"></i>
+                </div>
+                <div class="underline"></div>
+                <div class="sidebar-items">
+                    <ul class="nav-links">
+                        <li class="nav-items">
+                            <a href="">
+                                <i class="fa-solid fa-grip"></i>
+                                <p>Dashboard</p>
+                            </a>
+                        </li>
+                        <li class="nav-items">
+                            <a href="">
+                                <i class="fa-solid fa-file-pdf"></i>
+                                <p>Files</p>
+                            </a>
+                        </li>
+                        <li class="nav-items">
+                            <a href="">
+                                <i class="fa-solid fa-message"></i>
+                                <p>Messages</p>
+                            </a>
+                        </li>
+                         <li class="nav-items">
+                            <a href="">
+                                <i class="fa-solid fa-envelope"></i>
+                                <p>Emails</p>
+                            </a>
+                        </li>
+                        <li class="nav-items">
+                            <a href="">
+                                <i class="fa-solid fa-gear"></i>
+                                <p>Settings</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <h2>Content will come here</h2>
+        </div>
+    </div>
+    <script src="/app/static/js/index.js"></script>
 </body>
 </html>
