--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/app/static/css/index.css">
-    <script src="https://kit.fontawesome.com/606d99f9be.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <title>Document</title>
 </head>
 <body>
@@ -39,10 +39,10 @@
                                 <p>Messages</p>
                             </a>
                         </li>
-                         <li class="nav-items">
+                         <li class="nav-items AI">
                             <a href="">
-                                <i class="fa-solid fa-envelope"></i>
-                                <p>Emails</p>
+                                <i class="fa-solid fa-brain"></i>
+                                <p>Doc Analyzer AI</p>
                             </a>
                         </li>
                         <li class="nav-items">
